fix: adjust search button positioning and size for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -508,10 +508,10 @@ p{
   }
   img.search_btn {
     position: absolute;
-    top: 50%;
-    right: 75%;
+    top: 20%;
+    right: 50%;
     width: auto;
-    height: 2vh;
+    height: 4vh;
     z-index: 101; 
   }
   .support{
